[package]
name = "iot_alert_system"
version = "1.0.0"
authors = ["Kauê Miziara <kauemiziara@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32"] }
mpu6050 = "0.1.6"
